# OpenSOVD-native-server

./: .dockerignore  .gitignore  .redocly.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MBDS-README.md  MBDS_CONFORMANCE_AUDIT.md  MIGRATION.md  Makefile  NOTICE  README.md  STABILITY.md  openapi-spec.json
.cargo/: config.toml
.github/workflows/: ci.yml
config/: opensovd-native-server.toml
deploy/: Dockerfile  README.md  docker-compose.observability.yml  opensovd-native-server.service  opensovd-native.service
deploy/helm/opensovd/: Chart.yaml  values.yaml
deploy/helm/opensovd/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
docs/: architecture-review.md  architecture.md  asam-sovd-compliance-audit.md  cda-sovd-analysis.md  future-work-implementation-plan.md  howto-deploy-aaos.md  howto-deploy-nvidia-drive.md  howto-f15-oidc-e2e-validation.md  howto-f5-e2e-test-suite.md  howto-f8-someip-real-transport.md  implementation-plan-open-items.md  integrated-roadmap.md  iso-17978-3-compliance-audit.md  release-notes-v0.10.0-beta.md  release-notes-v0.7.0-beta.md  release-notes-v0.8.0-beta.md  release-notes-v0.8.1-beta.md  release-notes-v0.9.0-beta.md  requirements-cda-adaptions.md  security-audit.md  sovd-compliance-audit.md  sovd-server-feature-inspiration.md  wave-1-implementation-plan.md  wave-2-implementation-plan.md
docs/adr/: A1.1-graceful-shutdown.md  A1.2-health-probes.md  A1.3-body-size-limit.md  A1.4-config-validation.md  A1.5-appstate-subgroups.md  A1.6-error-catalog.md  A2.1-storage-backend-trait.md  A2.2-backend-trait-diet.md  A2.3-secrets-abstraction.md  A2.4-otlp-export.md  A2.5-per-client-rate-limiting.md  A3.1-cloud-bridge-topology.md  A3.2-multi-tenant-isolation.md  A3.3-tenant-context-middleware.md  A3.4-bridge-transport-trait.md  A3.5-api-versioning.md  A4.1-ontology-reference-standard.md  A4.2-data-catalog-provider-trait.md  A4.3-batch-export-format.md  A5.1-opensovd-core-architecture-mapping.md  ADR-0001-mbds-specific-adaptations.md  README.md
docs/proposal/: architecture-intent-native-server.md  rust-target-architecture-v2.md  score-integration-discussion.md
docs/rfc/: RFC-0001-opensovd-core-integration.md
examples/demo-ecu/: Cargo.toml
examples/demo-ecu/src/: main.rs
native-comm-doip/: Cargo.toml
native-comm-doip/src/: config.rs  connection.rs  discovery.rs  lib.rs
native-comm-someip/: Cargo.toml  build.rs
native-comm-someip/ffi/: vsomeip_wrapper.cpp  vsomeip_wrapper.h
native-comm-someip/src/: config.rs  ffi.rs  lib.rs  runtime.rs  service.rs
native-comm-uds/: Cargo.toml
native-comm-uds/src/: lib.rs  manager.rs  tester_present.rs
native-core/: Cargo.toml
native-core/benches/: diag_bench.rs
native-core/src/: audit_log.rs  backup.rs  diag_log.rs  fault_bridge.rs  fault_governor.rs  fault_manager.rs  history.rs  http_backend.rs  lib.rs  local_backend.rs  lock_manager.rs  ota.rs  router.rs  sled_storage.rs  syslog_sink.rs  translation.rs  vault_provider.rs  ws_bridge.rs
native-core/tests/: fault_injection.rs
native-health/: Cargo.toml
native-health/src/: lib.rs
native-interfaces/: Cargo.toml
native-interfaces/src/: audit_sink.rs  backend.rs  bridge.rs  data_catalog.rs  diag.rs  error.rs  feature_flags.rs  firmware_verify.rs  lib.rs  oem.rs  rbac.rs  secrets.rs  sovd.rs  storage.rs  tenant.rs
native-server/: Cargo.toml  build.rs
native-server/src/: main.rs  tls_reload.rs  watchdog.rs
native-sovd/: Cargo.toml  build.rs
native-sovd/src/: auth.rs  bridge.rs  dlt.rs  lib.rs  mdns.rs  oem_sample.rs  openapi.rs  rate_limit.rs  routes.rs  state.rs
scripts/: generate-sdk.sh
tests/load/: k6-sovd.js
