# ─────────────────────────────────────────────────────────────────────────────
# OpenSOVD-native-server – Native SOVD Server
# Part of the Eclipse OpenSOVD ecosystem
# ─────────────────────────────────────────────────────────────────────────────

[workspace.package]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/eclipse-opensovd"
repository = "https://github.com/eclipse-opensovd/OpenSOVD-native-server"
rust-version = "1.75"

[workspace]
resolver = "2"
members = [
    "native-interfaces",
    "native-comm-someip",
    "native-core",
    "native-sovd",
    "native-health",
    "native-server",
    "examples/demo-ecu",
]

# ── Internal workspace crates ────────────────────────────────────────────────
[workspace.dependencies]
native-interfaces = { path = "native-interfaces" }
native-comm-someip = { path = "native-comm-someip" }
native-core = { path = "native-core" }
native-sovd = { path = "native-sovd" }
native-health = { path = "native-health" }

# ── Common crates (aligned with CDA) ────────────────────────────────────────
async-trait = "0.1"
thiserror = "2"
parking_lot = "0.12"
serde = "1"
serde_json = "1"
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = "0.1"
futures = "0.3"
uuid = "1"
chrono = "0.4"
hex = "0.4"
strum = "0.27"
strum_macros = "0.27"
dashmap = "5"
http = "1"

# ── Web / API (axum + tower) ─────────────────────────────────────────────────
axum = { version = "0.8", default-features = false }
axum-extra = "0.10"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.5", default-features = false, features = ["limit"] }
tower-http = { version = "0.6", features = ["limit"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
jsonwebtoken = "9"
base64 = "0.22"
subtle = "2"

# ── mDNS/DNS-SD Discovery (MBDS §4.2) ──────────────────────────────────────
mdns-sd = "0.11"

# ── TLS / mTLS ─────────────────────────────────────────────────────────────
rustls = "0.23"
rustls-pemfile = "2"

# ── HTTP Client (SOVD Gateway → external CDA/SOVD servers) ──────────────────
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# ── Configuration (matching CDA: figment) ────────────────────────────────────
figment = "0.10"
toml = "0.8"

# ── Tracing & Logging (matching CDA: tracing ecosystem) ─────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }

# ── Health monitoring ────────────────────────────────────────────────────────
sysinfo = "0.30"

# ── Persistence ─────────────────────────────────────────────────────────────
sled = "0.34"

# ── vSomeIP FFI ──────────────────────────────────────────────────────────────
libc = "0.2"

# ── Workspace-wide lint policy (quality gate) ──────────────────────────────
# Every crate inherits these via `[lints] workspace = true`.
# Per-crate #![allow(...)] whitelists justified exceptions only.
[workspace.lints.clippy]
pedantic      = { level = "warn", priority = -1 }
unwrap_used   = "warn"
expect_used   = "warn"
# Justified global exceptions (documentation-heavy crate, not a public API)
missing_errors_doc  = "allow"
missing_panics_doc  = "allow"
must_use_candidate  = "allow"
doc_markdown        = "allow"
module_name_repetitions = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3

