# ─────────────────────────────────────────────────────────────────────────────
# native-comm-doip — DoIP communication layer
# Uses doip-codec + doip-definitions (same as CDA's cda-comm-doip)
# ─────────────────────────────────────────────────────────────────────────────

[package]
name = "native-comm-doip"
version = "0.5.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false
description = "DoIP communication layer for OpenSOVD-native-server"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
native-interfaces = { workspace = true }
async-trait = { workspace = true }
doip-definitions = { workspace = true }
doip-codec = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
socket2 = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["time", "sync", "net", "io-util", "rt"] }
tokio-util = { workspace = true, features = ["codec", "net"] }
tokio-openssl = { workspace = true }
openssl = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
