# ─────────────────────────────────────────────────────────────────────────────
# native-comm-uds — UDS communication layer
# Follows cda-comm-uds patterns (UdsManager, TesterPresent, session mgmt)
# ─────────────────────────────────────────────────────────────────────────────

[package]
name = "native-comm-uds"
version = "0.5.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false
description = "UDS communication layer for OpenSOVD-native-server"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
native-interfaces = { workspace = true }
native-comm-doip = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
futures = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
