# ─────────────────────────────────────────────────────────────────────────────
# native-core — Diagnostic core logic (OpenSOVD standard-conformant)
#
# SovdHttpBackend → external CDA / SOVD backends via REST API
# ComponentRouter → gateway aggregating multiple backends
# ─────────────────────────────────────────────────────────────────────────────

[package]
name = "native-core"
version = "0.19.0-rc"
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false
description = "Core diagnostic logic for OpenSOVD-native-server"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
native-interfaces = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
hex = { workspace = true }
sha2 = { workspace = true }

# HTTP backend (always available — standard-conformant gateway mode)
reqwest = { workspace = true }
base64 = { workspace = true }

# Persistent FaultManager (optional)
sled = { workspace = true, optional = true }

# WebSocket bridge transport (optional, F3)
tokio-tungstenite = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
axum = { workspace = true, features = ["tokio", "json", "http1"] }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "diag_bench"
harness = false

[features]
default = []
# Enable sled-based persistent storage for FaultManager
persist = ["dep:sled"]
# Enable HashiCorp Vault secret provider (F4)
vault = []
# Enable WebSocket bridge transport (F3)
ws-bridge = ["dep:tokio-tungstenite", "dep:futures"]
