# ─────────────────────────────────────────────────────────────────────────────
# native-health — Health monitoring (matching CDA's cda-health)
# ─────────────────────────────────────────────────────────────────────────────

[package]
name = "native-health"
version = "0.19.0-rc"
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false
description = "Health monitoring for OpenSOVD-native-server"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sysinfo = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
