# ─────────────────────────────────────────────────────────────────────────────
# native-interfaces — Shared types, traits and error definitions
# Equivalent to cda-interfaces in the CDA workspace
# ─────────────────────────────────────────────────────────────────────────────

[package]
name = "native-interfaces"
version = "0.6.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false
description = "Shared interfaces and types for OpenSOVD-native-server"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
hex = { workspace = true }
