# ─────────────────────────────────────────────────────────────────────────────
# native-server — Main binary (matching CDA's cda-main)
# ─────────────────────────────────────────────────────────────────────────────

[package]
name = "opensovd-native-server"
version = "0.5.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false
description = "OpenSOVD-native-server — main binary"

[lints]
workspace = true

[[bin]]
name = "opensovd-native-server"
path = "src/main.rs"

[dependencies]
native-interfaces = { workspace = true }
native-core = { workspace = true }
native-sovd = { workspace = true }
native-health = { workspace = true }
native-comm-someip = { workspace = true }

# Local UDS/DoIP (optional — standalone mode)
native-comm-doip = { workspace = true, optional = true }
native-comm-uds = { workspace = true, optional = true }

axum = { workspace = true, features = ["http1", "json", "tokio"] }
axum-server = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
figment = { workspace = true, features = ["toml", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dashmap = { workspace = true }
toml = { workspace = true }

[features]
default = ["local-uds"]
# Enable local UDS/DoIP backend (standalone mode with embedded CDA)
local-uds = ["dep:native-comm-doip", "dep:native-comm-uds", "native-core/local-uds"]
# Forward vsomeip-ffi to native-comm-someip
vsomeip-ffi = ["native-comm-someip/vsomeip-ffi"]
# Enable sled-based persistent FaultManager
persist = ["native-core/persist"]
