# ─────────────────────────────────────────────────────────────────────────────
# native-server — Main binary
# ─────────────────────────────────────────────────────────────────────────────

[package]
name = "opensovd-native-server"
version = "0.6.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false
description = "OpenSOVD-native-server — main binary"

[lints]
workspace = true

[[bin]]
name = "opensovd-native-server"
path = "src/main.rs"

[dependencies]
native-interfaces = { workspace = true }
native-core = { workspace = true }
native-sovd = { workspace = true }
native-health = { workspace = true }
native-comm-someip = { workspace = true }

axum = { workspace = true, features = ["http1", "json", "tokio"] }
axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
figment = { workspace = true, features = ["toml", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dashmap = { workspace = true }
toml = { workspace = true }

[features]
default = []
# Forward vsomeip-ffi to native-comm-someip
vsomeip-ffi = ["native-comm-someip/vsomeip-ffi"]
# Enable sled-based persistent FaultManager
persist = ["native-core/persist"]
