# ─────────────────────────────────────────────────────────────────────────────
# demo-ecu — Example SOVD backend for demonstration
#
# A mock ECU that exposes SOVD-compatible REST endpoints. Point the
# OpenSOVD-native-server's [[backends]] config at this service to see
# the gateway in action.
# ─────────────────────────────────────────────────────────────────────────────

[package]
name = "demo-ecu"
version = "0.8.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Demo ECU — mock SOVD backend for OpenSOVD-native-server"

[lints]
workspace = true

[[bin]]
name = "demo-ecu"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["http1", "json", "tokio"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
